--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Johannes Brodwall <johannes@brodwall.com>",
   "license": "Apache Software License 2",
   "devDependencies": {
+    "bluebird": "^2.3.11",
     "bower": "^1.3.12",
     "chai": "^1.10.0",
     "mocha": "^2.0.1",
